chore: Remove ktlint from project
This commit removes the ktlint configuration and associated tasks from the `app/build.gradle.kts` file. It also removes the `pinterest-ktlint` dependency from the `gradle/libs.versions.toml` file.